@@ -3,6 +3,10 @@
  _______________
 
  Changes between 0.9.8m (?) and 1.0.0  [xx XXX xxxx]
+
+  *) Add new -subject_hash_old and -issuer_hash_old options to x509 utility to
+     output hashes compatible with older versions of OpenSSL.
+     [Willy Weisz <weisz@vcpc.univie.ac.at>]
   
   *) Fix compression algorithm handling: if resuming a session use the
      compression algorithm of the resumed session instead of determining
